[tool.poetry]
name = "closestpoint"
version = "0.1.0"
description = ""
authors = ["ate362 <a_t_e@gmx.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
scipy = "^1.12.0"
ipykernel = "^6.29.2"
sympy = "^1.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
